simple/istio/simple-api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-api-gateway
  namespace: api
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dev.simple-api.172.25.162.242.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-api-vs
  namespace: api
spec:
  hosts:
  - "dev.simple-api.172.25.162.242.nip.io"
  gateways:
  - simple-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: simple-api-svc
        port:
          number: 8080
